clean up some orphaned code

--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -13,8 +13,8 @@
     "import seaborn as sns\n",
     "\n",
     "n_sides = 6\n",
-    "n_rolls = 10000\n",
-    "n_dice = 2\n",
+    "n_rolls = 100\n",
+    "n_dice = 1\n",
     "\n",
     "results = []\n",
     "for roll in range(n_rolls):\n",
@@ -62,23 +62,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "towns = pd.read_html('https://en.wikipedia.org/wiki/Local_government_in_the_United_States')[2]\n",
-    "towns['Constituents per Councilmember'].hist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df = pd.DataFrame.from_dict({\n",
     "    'style': ['Strawberry', 'Blueberry', 'Cherry', 'Lemon meringue', 'Chocolate', 'Sweet potato', 'Apple', 'Pecan', 'Pumpkin', 'Others'],\n",
     "    'share': [2, 3, 3, 4, 9, 10, 14, 17, 36, 2]\n",
     "})\n",
     "df.set_index('style').plot.pie(subplots=True, autopct='%.0f%%', legend=False)\n",
-    "plt.ylabel('')\n",
-    "plt.savefig('pie.svg')"
+    "plt.ylabel('')"
    ]
   },
   {
@@ -90,26 +79,7 @@
     "sns.set_style(\"whitegrid\")\n",
     "sns.barplot(data=df, y='style', x='share')\n",
     "\n",
-    "plt.ylabel('')\n",
-    "plt.savefig('bar.svg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('SAT Report 2015-2016.csv', index_col='index', na_values='*')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.displot(data=df, x='AvgScrMath')"
+    "plt.ylabel('')"
    ]
   },
   {
